--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/InnateAlpaca/pterosocket#readme",
   "dependencies": {
-    "node-fetch": "^3.2.4"
+    "node-fetch": "^3.2.4",
+    "pterosocket": "^1.0.6"
   }
 }
